--- a/CodePulse.API/appsettings.json
+++ b/CodePulse.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodePulseConnectionString": "Server=localhost;Database=CodePulseDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
